--- a/packages/dappmanager/package.json
+++ b/packages/dappmanager/package.json
@@ -46,6 +46,7 @@
     "@types/socket.io": "^2.1.8",
     "@types/stack-trace": "^0.0.29",
     "@types/strip-ansi": "^5.2.1",
+    "@types/tar-stream": "^2.1.0",
     "abort-controller": "^3.0.0",
     "ajv": "^6.10.2",
     "async": "^2.6.1",
@@ -59,7 +60,7 @@
     "dargs": "^7.0.0",
     "data-uri-to-buffer": "^2.0.0",
     "deepmerge": "^2.2.1",
-    "dockerode": "^2.5.8",
+    "dockerode": "^3.2.1",
     "ethers": "^4.0.38",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
@@ -84,6 +85,7 @@
     "source-map-support": "^0.5.19",
     "stack-trace": "^0.0.10",
     "strip-ansi": "^6.0.0",
+    "tar-stream": "^2.1.4",
     "timestring": "^6.0.0",
     "ts-loader": "^8.0.2",
     "tweetnacl": "^1.0.1",
