--- a/packages/dappmanager/package.json
+++ b/packages/dappmanager/package.json
@@ -22,6 +22,7 @@
     "@types/async": "^3.0.1",
     "@types/async-retry": "^1.4.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/busboy": "^0.2.3",
     "@types/chai": "^4.2.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-session": "^2.0.41",
@@ -53,6 +54,7 @@
     "async-retry": "^1.3.1",
     "bcryptjs": "^2.4.3",
     "bitcoin-core": "^2.0.0",
+    "busboy": "^0.3.1",
     "cids": "^0.8.0",
     "compression": "^1.7.4",
     "cookie-session": "^1.4.0",
@@ -101,6 +103,7 @@
     "chai": "^4.1.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.2.2",
+    "form-data": "^3.0.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.6",
     "prettier": "^1.16.4",
